--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="banner-info">
             <div class="banner-logo text-center">
-              <img src="img2.jpg" class="img-responsive" style="width: 140px;">
+              <img src="public/img2.jpg" class="img-responsive" style="width: 140px;">
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Healthcare at your desk!!</h1>
