--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				        <span class="icon-bar"></span>
 				      </button>
               <div class="brand">
-              <img src="new5.png" class="img-responsive" style="width: 120px; margin-top: -16px;"></a>
+              <img src="public/new5.png" class="img-responsive" style="width: 120px; margin-top: -16px;"></a>
             </div>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
