--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Healthcare at your desk!!</h1>
-              <p>This website is specially designed to help different peoples to classify their<br>respective disease and their concern doctors.</p>
+              <p>We are more concerned about the wellness and overall wellbeing of every living human being <br>respective of disease and their problems. </p>
               <div class="link">
               <a href="https://symptoms.webmd.com/default.htm#/info">System Checker</a>
               </div>
