--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <br>
                   <input type="text" class="box" id="password" name="password" placeholder="Company Name" required/>
                   <br>
-                  <input type="submit" value="Submit" id="submit" />
+                  <input type="submit" value="Submit" id="submit" a href="public/signup_successful.html"/>
 
                   </form>
               </form>
