--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
     <div class="container">
       <div class="row">
           <div class="col-mod-3">
-              
+              <a href="notice/Notification/index.html"> <h2> Notifications </h2> </a> <br> <br>
           </div>
           <div class="col-md-6 main">
               <form action="/sign_up" method="POST">
-                <h1>Accounting Department </h1>
-                  <h2> Wire Transfer Instruction Form</h2>
+                <h1>Accounting Department </h1> <br>
+                  <h2> Wire Transfer Instruction Form</h2> <br> <br>
                   <input type="text" class="box" id="name" name="name" placeholder="Account Number" required/>
                   <br>
                   <input type="text" class="box" id="age" name="age" placeholder="Routing Number" required/>
