--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="container">
       <div class="row">
           <div class="col-mod-3">
-              <a href="notice/Notification/index.html"> <h2> Notifications </h2> </a> <br> <br>
+              <a href="Notification/index.html"> <h2> Notifications </h2> </a> <br> <br>
           </div>
           <div class="col-md-6 main">
               <form action="/sign_up" method="POST">
