--- a/Notification/index.html
+++ b/Notification/index.html
@@ -50,6 +50,13 @@
                    <p class="time">2 day ago</p>
               </div>
         </div>
+        <div id="allUsers" class="User2 Unseen">
+          <img src="assets/images/avatar-angela-gray.webp">
+          <div class="User2-Notif">
+            <p><span class="Names"> We have succesfully received a deposit of $1,350 </span>, <a href="https://docs.google.com/document/d/1kAR0YP8KMUL-2Tq2sbs4pIh2WNZw7PAIjwblpGQLrmI/edit?usp=sharing">click here to see your funding status</a>   </p>
+            <p class="time">today</p>
+          </div>
+    </div>
     
        </div>
     
