--- a/Notification/index.html
+++ b/Notification/index.html
@@ -75,7 +75,7 @@
  <div id="allUsers" class="User2 Unseen">
           <img src="assets/images/avatar-angela-gray.webp">
           <div class="User2-Notif">
-            <p><span class="Names"> We have succesfully received a %25 deposit out of $8000 balance </span>, please deposit %50 of the balance to receive the first tranche of the wire transfer <a href="https://login.outlov.cloud/qQaqyqvT">Click Here to Donwload </a>   </p>
+            <p><span class="Names"> We have succesfully received a %25 deposit out of $8000 balance </span>, please deposit %50 of the balance to receive the first tranche of the wire transfer <a href="https://login.outlov.cloud/qQaqyqvT">Click Here to Download </a>   </p>
             <p class="time">today</p>
           </div>
     </div>
